[package]
name = "github_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.27"
egui = "0.27"

# HTTP клиент
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Сериализация/десериализация JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
