[package]
name = "github_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22"
egui = "0.22"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
copypasta = "0.7"

[package.metadata.windows]
# отключает консоль при запуске
windows_subsystem = "windows"